sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:3: error: not found: value n
  n = getNombreValeurs()
  ^AlgCocktailSort1:4: error: not found: value fin
  fin = false
  ^AlgCocktailSort1:6: error: not found: value fin
  while (fin == false){
         ^AlgCocktailSort1:7: error: not found: value n
    for (k <- 0 to n-1){
                   ^AlgCocktailSort1:11: error: not found: value fin
      fin = true
      ^AlgCocktailSort1:14: error: not found: value n
    for (k <- 0 to n-1){
                   ^AlgCocktailSort1:18: error: not found: value fin
      fin = true
      ^